--- a/app/scripts/collections/templates/collections.tpl.html
+++ b/app/scripts/collections/templates/collections.tpl.html
@@ -5,7 +5,7 @@
     <span ng-click="vm.clearCollection()" title="Clear collection" class="icon-clear"></span>
 
 
-    <my-dialog ng-show="vm.dialogActive" classes="vm.dialogClasses" type="vm.dialogType" text="vm.dialogText" response="vm.clearCollection(option)"></my-dialog>
+   <starc-dialog ng-show="vm.dialogActive" classes="vm.dialogClasses" type="vm.dialogType" text="vm.dialogText" response="vm.clearCollection(option)"></starc-dialog>
 
     <div ng-show="vm.saveDialog" ng-class="['collection-dialog', 'save']">
       <p>Collection title</p>
