--- a/app/scripts/statistics/templates/statistics.tpl.html
+++ b/app/scripts/statistics/templates/statistics.tpl.html
@@ -1,5 +1,5 @@
 <div class='statistics-container'>
-	<preloader active="active" class="stat-preloader"></preloader>
+	<starc-preloader active="active" class="stat-preloader"></starc-preloader>
 		<div class="statistics-content" ng-show="!active">
 			<h3>Repository statistics</h3>
 
