Refactoring statistics module

--- a/app/scripts/statistics/templates/statistics.tpl.html
+++ b/app/scripts/statistics/templates/statistics.tpl.html
@@ -1,27 +1,27 @@
 <div class='statistics-container'>
-	<starc-preloader active="active" class="stat-preloader"></starc-preloader>
-		<div class="statistics-content" ng-show="!active">
+	<starc-preloader active="vm.active" class="stat-preloader"></starc-preloader>
+		<div class="statistics-content" ng-show="!vm.active">
 			<h3>Repository statistics</h3>
 
-			<div ng-show="statActive">
-				<p>Number of objects: <span class="val">{{ stats.numberOfObjects }}</span></p>
+			<div ng-show="vm.statActive">
+				<p>Number of objects: <span class="val">{{ vm.stats.numberOfObjects }}</span></p>
 				<p>Object types</p>
 				<ul>
-					<li ng-repeat="type in stats.types" >
-						<span ng-class="{selected: type.selected}">{{type.type}} (<a href="#" ng-click="search('types', type.type)">{{type.number}}</a>)</span>	
+					<li ng-repeat="type in vm.stats.types" >
+						<span ng-class="{selected: type.selected}">{{type.type}} (<a href="#" ng-click="vm.search('types', type.type)">{{type.number}}</a>)</span>
 					</li>
 					
 					
 				</ul>
 				<p>Data collections</p>
 				<ul class="data-collections-list">
-					<li ng-repeat="collection in stats.collections">
-						<span>{{collection.collection}} (<a ng-click="search('collections', collection.collection)" href="#">{{collection.number}}</a>)</span>
+					<li ng-repeat="collection in vm.stats.collections">
+						<span>{{collection.collection}} (<a ng-click="vm.search('collections', collection.collection)" href="#">{{collection.number}}</a>)</span>
 					</li>	
 				</ul>
 				<p>Personal collections</p>
 				<ul class="data-collections-list">
-					<li ng-repeat="collection in stats.personal">
+					<li ng-repeat="collection in vm.stats.personal">
 						<span>{{collection.name}} (<a href="#">{{collection.number}}</a>)</span>
 					</li>	
 				</ul>
