--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -42,6 +42,33 @@ body {
 }
 
 
+@font-face {
+    font-family: 'icomoon';
+    src:url('fonts/icomoon.eot?-u6dpwi');
+    src:url('fonts/icomoon.eot?#iefix-u6dpwi') format('embedded-opentype'),
+    url('fonts/icomoon.woff?-u6dpwi') format('woff'),
+    url('fonts/icomoon.ttf?-u6dpwi') format('truetype'),
+    url('fonts/icomoon.svg?-u6dpwi#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon2-"], [class*=" icon2-"] {
+    font-family: 'icomoon';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+
+
 .container{
   width: 1024px;
   overflow: auto;
