--- a/app/scripts/search/templates/search.tpl.html
+++ b/app/scripts/search/templates/search.tpl.html
@@ -1,4 +1,4 @@
-<input type="search" ng-model="vm.query.input" ng-change="vm.change(vm.query)" >
+<input ondragstart="return false;" ondrop="return false;" type="search" ng-model="vm.query.input" ng-change="vm.change(vm.query)" >
 <a href="#" ng-click="vm.search()"  class="searchButton">SEARCH</a>
 <span class="advanced-search-link">
 	<a href="#" ng-click="vm.search.advanced=!vm.search.advanced">Advanced Search</a>
