--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -76,7 +76,12 @@ body {
   margin: auto;
 
 }
-
+input {
+    outline:none;
+}
+textarea{
+    outline: none;
+}
 .menu-container{
   width: 1018px;
   height: 70px;
