--- a/app/scripts/stories/templates/story.block.template.html
+++ b/app/scripts/stories/templates/story.block.template.html
@@ -1,21 +1,41 @@
 
 <div ng-click="vm.blockSelected()" ng-class="vm.menuActive ? 'story-block active' : 'story-block'">
+
   <div class="story-block-menu" >
-    <span class="icon-holder icon2-add" ng-click="addBlock()" title="add block"></span>
-    <span ng-show="!vm.title" class="icon-holder icon2-remove" ng-click="removeBlock()" title="remove block"></span>
-    <span ng-show="!vm.title" ng-click="vm.addSource('object')" class="icon-holder icon-object" title="add object"></span>
-    <span ng-show="!vm.title" ng-click="vm.addSource('text')" title="add text" class="icon-holder icon2-text"></span>
+    <span class="icon-holder icon2-add" ng-click="manageBlock('add')" title="add block"></span>
+    <span ng-show=" type !== 'title' " class="icon-holder icon2-remove" ng-click="manageBlock('remove')" title="remove block"></span>
+    <span ng-show="type !== 'title' " ng-click="vm.setBlockType('object')" ng-class="type === 'object' ? 'icon-holder icon-object active' : 'icon-holder icon-object'" title="add object"></span>
+    <span ng-show="type !== 'title'" ng-click="vm.setBlockType('text')" title="add text" ng-class="type === 'text' ? 'icon-holder icon2-text active' : 'icon-holder icon2-text'"></span>
     <span class="block-description">{{vm.blockTitle}}</span>
 
+  </div>
 
+  <div ng-show="type === 'object'"   class="object-container">
+    <!--<img src="images/add-object.png" height="80px"></img>-->
+    <div  class="selected-objects">
+      <div ng-repeat="img in vm.selectedObjects" class="selected-container">
+        <div class="image-container">
+          <img ng-src="{{img.imageLocation}}" height="60px"/>
+          <div class="remove-button">
+            <span ng-click="removeItemFromObjects($index)" class="icon2-remove"></span>
+          </div>
+        </div>
+        <div class="label">
+          <span>{{img.label}}</span>
+        </div>
+
+      </div>
+    </div>
+    <div ng-show="drop && vm.dropEnabled" ui-on-Drop="contentChanged('object', $data)"  class="notification-container">
+      <span>Drag and drop objects here</span>
+    </div>
   </div>
-  <div ng-show="vm.objectActive" class="object-container">
-    <img src="images/add-object.png" height="80px"/>
+
+  <div ng-show="type === 'text'" class="text-container">
+    <textarea ng-change="contentChanged('text', $index)" ng-model="vm.text" ></textarea>
   </div>
-  <div ng-show="vm.textActive" class="text-container">
-    <textarea ></textarea>
-  </div>
-  <div ng-show="vm.title" class="title-container">
-    <input type="text" />
+
+  <div ng-show="type === 'title'" class="title-container">
+    <input type="text" ng-change="contentChanged('title', $index)" ng-model="vm.title"></input>
   </div>
 </div>
