--- a/app/styles/commons.css
+++ b/app/styles/commons.css
@@ -12,11 +12,11 @@
 
 @font-face {
 	font-family: 'my-icons';
-	src:url('fonts/my-icons.eot?wxs9c7');
-	src:url('fonts/my-icons.eot?#iefixwxs9c7') format('embedded-opentype'),
-		url('fonts/my-icons.woff?wxs9c7') format('woff'),
-		url('fonts/my-icons.ttf?wxs9c7') format('truetype'),
-		url('fonts/my-icons.svg?wxs9c7#my-icons') format('svg');
+	src:url('../fonts/my-icons.eot?wxs9c7');
+	src:url('../fonts/my-icons.eot?#iefixwxs9c7') format('embedded-opentype'),
+		url('../fonts/my-icons.woff?wxs9c7') format('woff'),
+		url('../fonts/my-icons.ttf?wxs9c7') format('truetype'),
+		url('../fonts/my-icons.svg?wxs9c7#my-icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
