--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -14,11 +14,12 @@ body {
 
 @font-face {
   font-family: 'my-icons';
-  src:url('fonts/my-icons.eot?wxs9c7');
-  src:url('fonts/my-icons.eot?#iefixwxs9c7') format('embedded-opentype'),
-    url('fonts/my-icons.woff?wxs9c7') format('woff'),
-    url('fonts/my-icons.ttf?wxs9c7') format('truetype'),
-    url('fonts/my-icons.svg?wxs9c7#my-icons') format('svg');
+  src:url('../fonts/my-icons.eot?wxs9c7');
+  src:url('../fonts/my-icons.eot?#iefixwxs9c7') format('embedded-opentype'),
+    url('../fonts/my-icons.woff?wxs9c7') format('woff'),
+    url('../fonts/my-icons.ttf?wxs9c7') format('truetype'),
+    url('../fonts/my-icons.svg?wxs9c7#my-icons') format('svg');
+  
   font-weight: normal;
   font-style: normal;
 }
@@ -44,11 +45,11 @@ body {
 
 @font-face {
     font-family: 'icomoon';
-    src:url('fonts/icomoon.eot?-u6dpwi');
-    src:url('fonts/icomoon.eot?#iefix-u6dpwi') format('embedded-opentype'),
-    url('fonts/icomoon.woff?-u6dpwi') format('woff'),
-    url('fonts/icomoon.ttf?-u6dpwi') format('truetype'),
-    url('fonts/icomoon.svg?-u6dpwi#icomoon') format('svg');
+    src:url('../fonts/icomoon.eot?-u6dpwi');
+    src:url('../fonts/icomoon.eot?#iefix-u6dpwi') format('embedded-opentype'),
+    url('../fonts/icomoon.woff?-u6dpwi') format('woff'),
+    url('../fonts/icomoon.ttf?-u6dpwi') format('truetype'),
+    url('../fonts/icomoon.svg?-u6dpwi#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
